--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,6 @@
+<button type="button" class="btn btn-success" [disabled]="!allowNewServer">Add Server</button>
+<button class="btn btn-danger">Remove Server</button>
+<hr>
 <app-server></app-server>
 <app-server></app-server>
 <app-server></app-server>
