Data Binding forms: string interpolation {{}}, property binding [], event binding () and Two Way Data Binding [()}

--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -6,11 +6,11 @@ class="form-control"
 style="margin-bottom: 2rem; margin-top: 1rem;">
 <hr> -->
 <input
-placeholder="Server Name" 
+placeholder="Server Name or ID" 
 type="text" 
 class="form-control"
 [(ngModel)]="serverName"
-style="margin-bottom: 2rem; margin-top: 1rem;">
+style="margin-bottom: 2rem; margin-top: 0.5rem;">
 <hr>
 <p>{{ serverName }}</p>
 <div class="btn-toolbar">
