ngStyle Directive - changing styles of server components dynamically

--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,2 +1,3 @@
-<p class="online" *ngIf="getServerStatus()=='online'">{{ 'Server' }} {{ getServerId() }} is {{ getServerStatus() }}</p>
-<p class="offline" *ngIf="getServerStatus()=='offline'">{{ 'Server' }} {{ getServerId() }} is {{ getServerStatus() }}</p>
+<!-- <p class="online" *ngIf="getServerStatus()=='online'">{{ 'Server' }} {{ getServerId() }} is {{ getServerStatus() }}</p>
+<p class="offline" *ngIf="getServerStatus()=='offline'">{{ 'Server' }} {{ getServerId() }} is {{ getServerStatus() }}</p> -->
+<p [ngStyle]="{backgroundColor: getColor()}">{{ 'Server' }} {{ getServerId() }} is {{ getServerStatus() }}</p>
