--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -47,7 +47,7 @@ style="margin-bottom: 2rem; margin-top: 0.5rem;">
 style="padding: 0.5rem;"
 (click)="onResetUserName()">
 Reset User</button>
-<hr>
+<!-- <hr>
 <input placeholder="User Name"
 [(ngModel)]="userName"
 class="form-control"
@@ -58,6 +58,6 @@ style="margin-bottom: 2rem; margin-top: 0.5rem;">
 [disabled]="!userName"
 style="padding: 0.5rem;"
 (click)="onResetUserName()">
-<!-- (click)="userName = ''" -->
-Reset User</button>
+(click)="userName = ''"
+Reset User</button> -->
 </div>
